--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postinstall": "npx jetify"
   },
   "dependencies": {
+    "@react-native-community/art": "^1.2.0",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/checkbox": "^0.5.6",
     "@react-native-community/geolocation": "^2.0.2",
@@ -54,6 +55,7 @@
     "react-native-onboarding-swiper": "^1.1.4",
     "react-native-option-menu": "^1.1.3",
     "react-native-paper": "^4.3.1",
+    "react-native-progress": "^4.1.2",
     "react-native-push-notification": "^6.1.3",
     "react-native-reanimated": "^1.13.1",
     "react-native-restart": "^0.0.20",
