--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -222,6 +222,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:18.0.0'
     implementation 'commons-validator:commons-validator:1.6'
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
+    implementation 'com.facebook.fresco:animated-gif:2.0.0'
 }
 
 // Run this once to be able to run the application with BUCK
