--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-native-google-places-autocomplete": "^2.0.3",
     "react-native-icon-badge": "^1.1.3",
     "react-native-image-base64": "^0.1.4",
+    "react-native-image-keyboard": "^2.0.0",
     "react-native-image-picker": "^3.1.3",
     "react-native-image-resizer": "^1.4.2",
     "react-native-image-rotate": "^2.1.0",
