--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "16.13.1",
     "react-native": "0.63.3",
     "react-native-alert-pro": "^1.1.2",
+    "react-native-animatable": "^1.3.3",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-appearance": "^0.3.4",
     "react-native-dialog": "^6.1.2",
@@ -63,6 +64,7 @@
     "react-native-onboarding-swiper": "^1.1.4",
     "react-native-option-menu": "^1.1.3",
     "react-native-paper": "^4.7.1",
+    "react-native-pose": "^0.9.1",
     "react-native-progress": "^4.1.2",
     "react-native-push-notification": "^6.1.3",
     "react-native-reanimated": "^1.13.1",
@@ -71,6 +73,7 @@
     "react-native-screens": "^2.13.0",
     "react-native-sectioned-multi-select": "^0.8.1",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-status-bar-height": "^2.6.0",
     "react-native-svg": "^12.1.0",
     "react-native-tags": "^2.2.0",
     "react-native-textarea": "^1.0.4",
